<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accountModule.view.AccountFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/common_space_default"
            android:paddingBottom="@dimen/common_space_default"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_space_default"
                app:cardCornerRadius="@dimen/account_corner_radius_large"
                app:cardElevation="@dimen/common_space_min">
                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="@dimen/profile_image_size_large"
                    android:layout_height="@dimen/profile_image_size_large"
                    android:src="@drawable/ic_wine_bar"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_space_default"
                android:text="@string/hint_name"/>
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                tools:text="Cursos Android ANT"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_space_default"
                android:text="@string/hint_email"/>
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:autoLink="email"
                android:linksClickable="false"
                tools:text="cursosandroidant@gmail.com"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_space_default"
                android:text="@string/hint_phone"/>
            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                tools:text="+52 555 384 9345"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_btn_sign_out"
                android:layout_marginTop="@dimen/common_space_default"
                app:icon="@drawable/ic_logout"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"/>
        </LinearLayout>

        <include
            android:id="@+id/content_progress"
            layout="@layout/content_progress"/>
    </FrameLayout>
</ScrollView>