<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/content_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_space_extra_large"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        tools:visibility="visible">
        <ImageView
            android:layout_width="@dimen/login_img_size"
            android:layout_height="@dimen/login_img_size"
            android:src="@drawable/ic_wine_bar"
            app:tint="@color/red_a700"
            android:importantForAccessibility="no"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="cursosant"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pin"
            app:endIconMode="password_toggle"
            android:layout_marginTop="@dimen/common_space_min">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="1234"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_login"
            android:layout_marginTop="@dimen/common_space_min"
            app:icon="@drawable/ic_login"
            app:iconGravity="textStart"/>
    </LinearLayout>

    <include
        android:id="@+id/content_progress"
        layout="@layout/content_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>